# OiAK

./: FlowshopData.cpp  FlowshopData.h  bbAlgorithm.s  main.cpp  nehAlgorithm.py  neh_asm.s  odpalenie.sh  program.s
BB_algorithm/: makefile  oiak_asm_bb.s  oiak_bb.cpp
Bruteforce/: CMakeLists.txt  main.cpp
BruteforceANDMatrixLoader/: CMakeLists.txt  Matrixloader.cpp  Matrixloader.h  main.cpp
OIAK/: BbAlgorithm.cpp  BbAlgorithm.h  CMakeLists.txt  DataGenerator.cpp  DataGenerator.h  FileReader.cpp  FileReader.h  NehAlgorithm.cpp  NehAlgorithm.h  Timer.cpp  Timer.h  flowshop.txt  main.cpp
neh_assembler/: main.cpp  neh_assembler.s
oiak_etap2/: CMakeLists.txt  DataGenerator.h  NehAlgorithm.cpp  NehAlgorithm.h  main.cpp
